[tool.poetry]
name = "aws-reference-mkdocs-plugin"
version = "0.1.0"
description = "Reference AWS resources within MKdocs and render details"
authors = ["Morgan Chorlton <morganchorlton3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
